--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -341,3 +341,89 @@ body {
   transform: translateY(-5px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
+
+
+/* CSS for Booking.js */
+
+.booking-container {
+  max-width: 1300px;
+}
+
+.booking-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.5rem;
+}
+
+.time-slot-section {
+  background-color: #f9f9f9;
+  padding: 1rem;
+  border-radius: 15px;
+  border: 1px solid #ddd;
+}
+
+.time-slot-title {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #333;
+  margin-bottom: 1rem;
+}
+
+.selected-time, .no-selection {
+  font-size: 1rem;
+  color: #555;
+  padding: 0.75rem;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.time-slot-button {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  border-radius: 4px;
+}
+
+.time-slot-button.primary {
+  background-color: #007bff;
+  color: white;
+}
+
+.confirm-button {
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: #d4af37;
+  border-color: #d4af37;
+  color: white;
+  border-radius: 4px;
+}
+
+.back-button {
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 4px;
+}
+
+.greyed-out-day {
+  background-color: #e0e0e0;
+  color: #a9a9a9;
+  cursor: not-allowed;
+}
+
+.hoverable-day {
+  transition: background-color 0.3s ease;
+}
+
+.hoverable-day:hover {
+  background-color: #108efc; 
+  cursor: pointer;
+}
+
+.calendar {
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
