--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -39,7 +39,6 @@ code {
   min-width: 250px;
 }
 
-
 /* Collapsible sidebar on smaller screens */
 @media (max-width: 768px) {
   .main-content {
@@ -219,7 +218,7 @@ body {
 .btn-primary.btn-sm.position-fixed {
   color: black;
   background-color: white;
-  border: 0px solid white; 
+  border: 0px solid white;
   padding: 8px 24px;
   font-weight: 500;
   border-radius: 10px;
@@ -228,7 +227,7 @@ body {
 }
 
 .btn-primary.btn-sm.position-fixed:hover {
-  background-color: #DCAF27;
+  background-color: #dcaf27;
   color: black;
   outline: none;
 }
@@ -237,8 +236,6 @@ body {
   outline: none;
   box-shadow: none;
 }
-
-
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -342,7 +339,6 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
-
 /* CSS for Booking.js */
 
 .booking-container {
@@ -372,7 +368,8 @@ body {
   margin-bottom: 1rem;
 }
 
-.selected-time, .no-selection {
+.selected-time,
+.no-selection {
   font-size: 1rem;
   color: #555;
   padding: 0.75rem;
@@ -382,7 +379,7 @@ body {
 }
 
 .selected-time-slot {
-  background-color: #2F455B !important;
+  background-color: #2f455b !important;
   color: white !important;
   border: none !important;
 }
@@ -395,12 +392,12 @@ body {
 }
 
 .time-slot-button.primary {
-  background-color: #2F455B;
+  background-color: #2f455b;
   color: white;
 }
 
 .time-slot-button:hover {
-  background-color: #2F455B;
+  background-color: #2f455b;
   color: white;
 }
 
@@ -430,12 +427,12 @@ body {
 }
 
 .hoverable-day:hover {
-  background-color: #DCAF27;
+  background-color: #dcaf27;
   cursor: pointer;
 }
 
 .selected-day {
-  background-color: #DCAF27 !important; 
+  background-color: #dcaf27 !important;
   color: white;
 }
 
@@ -488,7 +485,7 @@ body {
 
 /* Precoaching no sessions page */
 .custom-booking-button {
-  background-color: #DCAF27;
+  background-color: #dcaf27;
   color: #fff;
   border: none;
   box-shadow: none;
@@ -512,7 +509,8 @@ body {
   color: #555;
 }
 
-.admin-status, .shortcuts-title {
+.admin-status,
+.shortcuts-title {
   font-size: 1.2rem;
   color: #666;
 }
@@ -536,7 +534,7 @@ body {
 }
 
 .shortcut-icon {
-  color: #DCAF27;
+  color: #dcaf27;
 }
 
 .shortcut-title {
@@ -574,7 +572,7 @@ body {
 
 .admin-program-edit-button {
   align-self: flex-start;
-  background-color: #DCAF27;
+  background-color: #dcaf27;
   color: white;
   border: none;
   font-weight: 500;
@@ -612,18 +610,18 @@ body {
 
 .session-table {
   width: 100%;
-  margin: 0; 
-  background-color: transparent; 
+  margin: 0;
+  background-color: transparent;
 }
 
 .session-table th,
 .session-table td {
-  padding: 0.5rem; 
+  padding: 0.5rem;
   font-size: 1rem;
   color: #333;
   vertical-align: middle;
-  background-color: #f9f9f9; 
-  border: none; 
+  background-color: #f9f9f9;
+  border: none;
 }
 
 .session-table th {
@@ -638,12 +636,11 @@ body {
 }
 
 .action-icon:hover {
-  color: #DCAF27;
+  color: #dcaf27;
 }
 
-
 .create-session-button {
-  background-color: #DCAF27;
+  background-color: #dcaf27;
   color: white;
   font-weight: 500;
   border: none;
@@ -655,3 +652,51 @@ body {
   background-color: #b8921f;
 }
 
+/* Admin Edit Session Page */
+.page-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.divider-line {
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.form-control {
+  padding-right: 1rem; /* Adjust padding to standard */
+}
+
+.create-session-button {
+  background-color: #dcaf27;
+  color: white;
+  font-weight: 500;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+}
+
+.create-session-button:hover {
+  background-color: #b8921f;
+}
+
+.cancel-button {
+  background-color: #ff5733;
+  color: white;
+  font-weight: 500;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+}
+
+.cancel-button:hover {
+  background-color: #cc4629;
+}
+
+.button-group {
+  display: flex;
+  justify-content: start;
+  gap: 1rem;
+}
