--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -936,11 +936,17 @@ code {
 }
 
 /* Announcements */
+.announcement
+{margin-top: 20px;
+
+}
+
 .announcement-board {
   padding: 16px;
   background-color: #f9f9f9;
   border-radius: 8px;
   max-width: 300px;
+  margin-top: -100px;
 }
 
 .announcement-title {
