--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "League Spartan", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f8f9fa;
@@ -946,9 +946,8 @@ code {
   border-radius: 50px;
 }
 /* Announcements */
-.announcement
-{margin-top: 20px;
-
+.announcement {
+  margin-top: 20px;
 }
 
 .announcement-board {
@@ -986,7 +985,6 @@ code {
   margin-top: 8px;
   font-size: 0.9em;
 }
-
 
 .admin-create-announcement-page {
   background-color: #f5f5f5;
@@ -1030,3 +1028,4 @@ code {
 .admin-view-announcement .sort-select {
   width: 200px;
 }
+
