--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f8f9fa;
+  font-size: 1.1rem;
 }
 
 code {
