--- a/Frontend/src/StripePayment.css
+++ b/Frontend/src/StripePayment.css
@@ -1,15 +1,4 @@
-.App {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    font-size: 16px;
-    -webkit-font-smoothing: antialiased;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-}
-
-form {
+#payment-form {
     width: 30vw;
     min-width: 500px;
     align-self: center;
@@ -35,7 +24,7 @@ form {
 }
 
 /* Buttons and links */
-button {
+.stripe-button {
     background: #0055DE;
     font-family: Arial, sans-serif;
     color: #ffffff;
@@ -48,14 +37,15 @@ button {
     display: block;
     transition: all 0.2s ease;
     box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    margin: 2% 0%;
     width: 100%;
 }
 
-button:hover {
+.stripe-button:hover {
     filter: contrast(115%);
 }
 
-button:disabled {
+.stripe-button:disabled {
     opacity: 0.5;
     cursor: default;
 }
