--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -598,6 +598,29 @@ code {
   background-color: #1b2835;
 }
 
+/* Workshops Page */
+.workshops-card-title {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #333;
+  margin: 0; 
+  padding: 0; 
+}
+
+.workshops-card-text {
+  font-size: 1rem;
+  font-weight: normal;
+  color: #6c757d;
+  margin: 0; 
+  padding: 0;
+}
+
+.workshops-card-image-container {
+  margin: 0;
+  padding: 0;
+}
+
+
 /* Admin Edit Program Page */
 .page-title {
   font-size: 1.5rem;
